[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Planet.gd" type="Script" id=1]
[ext_resource path="res://texture/Planets/HabMoon.png" type="Texture" id=2]

[node name="Planet" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="RotationTmer" type="Timer" parent="."]

[node name="OrbitTimer" type="Timer" parent="."]
[connection signal="timeout" from="RotationTmer" to="." method="_on_RotationTmer_timeout"]
[connection signal="timeout" from="OrbitTimer" to="." method="_on_OrbitTimer_timeout"]
